--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lan="en">
-    <head>
-        <title>Week 9 Homework - World Happiness Report Map</title>
-
-    </head>
-    <body>
-        <h2>World Happiness Report Dataset: </h2>
-        <p>https://www.kaggle.com/datasets/sazidthe1/global-happiness-scores-and-factors</p>
-    </body>
+<html>
+<head>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.25.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.14.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.22.2"></script>
+</head>
+<body>
+  <div id="vis"/>
+  <script>
+    const spec = {
+  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
+  "title": "World Happiness Report (2021)",
+  "width": 800,
+  "height": 400,
+  "projection": {"type": "equalEarth"},
+  "data": {
+    "url": "https://raw.githubusercontent.com/lwhi0015/FIT3179/main/ne_110m.json",
+    "format": {"type": "topojson", "feature": "ne_110m_admin_0_countries"}
+  },
+  "transform": [
+    {
+      "lookup": "properties.NAME",
+      "from": {
+        "data": {
+          "url": "https://raw.githubusercontent.com/lwhi0015/FIT3179/main/WHR_2023.csv"
+        },
+        "key": "country",
+        "fields": ["happiness_score"]
+      },
+      "default": -1
+    },
+    {"calculate": "datum.happiness_score", "as": "Happiness Score"}
+  ],
+  "mark": {"type": "geoshape"},
+  "encoding": {
+    "color": {
+      "field": "Happiness Score",
+      "type": "quantitative",
+      "scale": {"type": "linear", "domain": [-1, 10]},
+      "title": "Happiness Score"
+    },
+    "tooltip": [
+      {"field": "properties.NAME", "type": "nominal", "title": "Country"},
+      {
+        "field": "happiness_score",
+        "type": "quantitative",
+        "title": "Happiness Score"
+      }
+    ]
+  },
+  "config": {}
+};
+    vegaEmbed("#vis", spec, {mode: "vega-lite"}).then(console.log).catch(console.warn);
+  </script>
+</body>
 </html>
